--- a/css/connect.css
+++ b/css/connect.css
@@ -1,5 +1,5 @@
 #connect {
-  padding: 5.5rem 0 4rem;
+  padding: 3.5rem 0 3rem;
   background: var(--bg);
 }
 
